--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,13 @@
   margin: 0 auto;
 }
 
+.error {
+  margin: 24px auto;
+  color: red;
+  max-width: 700px;
+  width: calc(100% - 32px);
+  font-size: 22px;
+}
 .Form {
   max-width: 700px;
   width: calc(100% - 32px);
