--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  background: #F0F0F0;
+  background: #f0f0f0;
   color: #212121;
 }
 
@@ -36,7 +36,7 @@
 }
 
 .form-field input:focus {
-  outline-color: #8FCE47;
+  outline-color: #8fce47;
 }
 
 #checkboxField {
@@ -54,7 +54,6 @@
   flex-direction: column;
   margin: 16px 0;
 }
-
 
 .cards {
   display: flex;
@@ -94,7 +93,7 @@
 }
 
 .card .content a {
-  color: #8FCE47;
+  color: #8fce47;
 }
 
 .card .picture div {
@@ -117,7 +116,7 @@
 }
 
 .button {
-  background:#8FCE47;
+  background: #8fce47;
   color: white;
   border: none;
   padding: 16px;
@@ -127,78 +126,91 @@
 }
 
 .footer {
-    height: 128px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    background: #F0F0F0
+  height: 128px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: #f0f0f0;
 }
 
 .footer__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer__copyright p {
-    margin: 8px 0 0;
-    letter-spacing: 1.5px;
+  margin: 8px 0 0;
+  letter-spacing: 1.5px;
 }
 
 .header {
-  background: #8FCE47;
+  background: #8fce47;
   margin: 0 auto 24px;
   width: calc(100% - 32px);
   max-width: 668px;
 }
 
-.header *, *:before, *:after {
-    position: relative;
+.header *,
+*:before,
+*:after {
+  position: relative;
 }
-    
+
 .header * {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-    
+
 .header h1 {
-    color: white;
-    font-size: 4rem; 
-    text-shadow: .03em .03em 0 #8FCE47;
-    line-height: 1;
-    position: relative;
-    z-index: 5;
-    margin: 24px 0;
+  color: white;
+  font-size: 4rem;
+  text-shadow: 0.03em 0.03em 0 #8fce47;
+  line-height: 1;
+  position: relative;
+  z-index: 5;
+  margin: 24px 0;
 }
 
 .header h1:after {
-    content: attr(data-shadow);
-    position: absolute;
-    top: .06em; left: .06em;
-    z-index: -1;
-    text-shadow: none;
-    background-image: linear-gradient(45deg, transparent 45%, #EAE8E0 45%, #EAE8E0 55%, transparent 0);
-    background-size: .05em .05em;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: shad-anim 15s linear infinite;
+  content: attr(data-shadow);
+  position: absolute;
+  top: 0.06em;
+  left: 0.06em;
+  z-index: -1;
+  text-shadow: none;
+  background-image: linear-gradient(
+    45deg,
+    transparent 45%,
+    #eae8e0 45%,
+    #eae8e0 55%,
+    transparent 0
+  );
+  background-size: 0.05em 0.05em;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shad-anim 15s linear infinite;
 }
 
 @keyframes shad-anim {
-    0% {background-position: 0 0}
-    0% {background-position: 100% -100%}
+  0% {
+    background-position: 0 0;
+  }
+  0% {
+    background-position: 100% -100%;
+  }
 }
 
 @media (min-width: 450px) {
   .header h1 {
-    font-size: 6rem; 
+    font-size: 6rem;
   }
   .card .content {
     padding: 24px;
@@ -209,7 +221,7 @@
 }
 @media (min-width: 600px) {
   .header h1 {
-    font-size: 8rem; 
+    font-size: 8rem;
   }
 }
 @media (min-width: 704px) {
@@ -219,6 +231,6 @@
 }
 @media (min-width: 750px) {
   .header h1 {
-    font-size: 10rem; 
+    font-size: 10rem;
   }
 }
